ai-services/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - croblodocus
                      - crobceratops
      containers:
        - name: open-webui
          # renovate: datasource=github-tags depname=open-webui/open-webui versioning=semver
          image: ghcr.io/open-webui/open-webui:v0.12.0
          ports:
            - name: open-webui
              containerPort: 8080
          volumeMounts:
            - name: storage
              # Models are downloaded and stored in the root home directory
              mountPath: /app/backend/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: open-webui-nfs-pvc
